[build-system]
requires = [
  "scikit-build-core",
  "setuptools_scm",
  # "numpy<2",
  # "yggdrasil-framework",
]
build-backend = "scikit_build_core.build"

[project]
name = "ePhotosynthesis"
dynamic = [
  "version",
]
dependencies = [
  "numpy<2",
  "yggdrasil-framework",
]
description = "Python wrapper for the ePhotosynthesis model for simulating leaf level photosynthesis."
license = {file = "LICENSE.md"}
keywords = [
  "photosynthesis", "plants", "simulation", "models"
]
authors = [
  { name="Meagan Lang", email="langmm.astro@gmail.com" },
  { name="Doug Friedel" },
]
maintainers = [
  { name="Meagan Lang", email="langmm.astro@gmail.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: C",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering",
]
requires-python = ">= 3.7"

[project.entry-points]
console_scripts = {file = "console_scripts.txt"}

[project.urls]
Homepage = "https://github.com/cropsinsilico/ePhotosynthesis_C"
Documentation = "https://cropsinsilico.github.io/ePhotosynthesis_C/"
Repository = "https://github.com/cropsinsilico/ePhotosynthesis_C"
Issues = "https://github.com/cropsinsilico/ePhotosynthesis_C/issues"
Changelog = "https://github.com/cropsinsilico/ePhotosynthesis_C/blob/main/HISTORY.rst"

[tool.scikit-build]
# experimental=true
# sdist.exclude = [
#   ".git*",
#   ".run",
# ]
sdist.include = [
  "_version.py",
]
# wheel.exclude = [
#   # "CMakeLists.txt",
#   "__pycache__",
#   "src",
# ]
wheel.packages = ["ePhotosynthesis"]
wheel.install-dir = "ePhotosynthesis"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
editable.verbose = true
build.targets = ["pyPhotosynthesis"]

[tool.setuptools_scm]
write_to = "_version.py"
git_describe_command = "git describe --tags --long"

# [tool.hatch.metadata.hooks.fancy-pypi-readme]
# content-type = "text/x-rst"

# [[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
# path = "README.rst"

[tool.pytest.ini_options]
minversion = "6.0"
norecursedirs = [
  ".*", "build", "dist", "CVS", "_darcs", "{arch}", "*.egg",
  "scripts", "utils",
]
python_files = [
  "test_*.py",
  # "__init__.py",
]

[tool.coverage.run]
omit = [
  # "*/python?.?/*",
  "*/lib-python/?.?/*.py",
  "*/lib_pypy/_*.py",
  "*/site-packages/ordereddict.py",
  "*/site-packages/nose/*",
  "*/unittest2/*",
]

[tool.coverage.report]
sort = "Cover"
ignore_errors = true
show_missing = true
exclude_lines = [
  "pragma: Python 3.8",
  "pragma: no cover",
  "pragma: debug",
  "pragma: in progress",
  "pragma: config",
  "pragma: completion",
  "pragma: testing",
  "pragma: version",
  "pragma: intermittent",
  "pragma: deprecated",
  "pragma: extern",
  "def __repr__",
  "def description_prefix",
  "if 0:",
  "if False:",
  "if __name__ == .__main__.:",
]

[tool.cibuildwheel]
test-requires = ["pytest"]
test-command = "pytest -m {project}/tests/python"

[tool.black]
line-length = 88
target-version = ['py27', 'py36', 'py37', 'py38', 'py39']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | _version\.py
)/
'''

